Bug 388093 - master branch fails to build due use of unreleased upstream changes for upgradeSystem() etc
Summary: master branch fails to build due use of unreleased upstream changes for upgra...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 388096 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-20 20:06 UTC by Rik Mills
Modified: 2017-12-20 23:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2017-12-20 20:06:19 UTC
The errors seen in both Kubuntu and Neon

Bionic for kubuntu has latest released packagekit(1.1.7)/packagekit-qt(0.9.6)

/<<BUILDDIR>>/plasma-discover-5.11.4+p18.04+git20171220.1629/libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp: In lambda function:
/<<BUILDDIR>>/plasma-discover-5.11.4+p18.04+git20171220.1629/libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp:149:29: error: ‘upgradeSystem’ is not a member of ‘PackageKit::Daemon’
         PackageKit::Daemon::upgradeSystem(name, PackageKit::Transaction::UpgradeKindDefault);
                             ^~~~~~~~~~~~~
/<<BUILDDIR>>/plasma-discover-5.11.4+p18.04+git20171220.1629/libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp:149:74: error: ‘UpgradeKindDefault’ is not a member of ‘PackageKit::Transaction’
         PackageKit::Daemon::upgradeSystem(name, PackageKit::Transaction::UpgradeKindDefault);
                                                                          ^~~~~~~~~~~~~~~~~~
/<<BUILDDIR>>/plasma-discover-5.11.4+p18.04+git20171220.1629/libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp: In member function ‘void PackageKitNotifier::refreshDatabase()’:
/<<BUILDDIR>>/plasma-discover-5.11.4+p18.04+git20171220.1629/libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp:165:84: error: ‘RoleUpgradeSystem’ is not a member of ‘PackageKit::Transaction’
     if (!m_distUpgrades && (PackageKit::Daemon::roles() & PackageKit::Transaction::RoleUpgradeSystem)) {
Comment 1 Aleix Pol 2017-12-20 23:20:41 UTC
*** Bug 388096 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2017-12-20 23:21:31 UTC
Git commit a8765a5b674578658cd4ec23f571b02195b1a171 by Aleix Pol.
Committed on 20/12/2017 at 23:20.
Pushed by apol into branch 'master'.

Fix commit on stable PackageKitQt

M  +5    -4    libdiscover/backends/PackageKitBackend/CMakeLists.txt
M  +4    -0    libdiscover/backends/PackageKitBackend/PackageKitNotifier.cpp
M  +2    -2    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://commits.kde.org/discover/a8765a5b674578658cd4ec23f571b02195b1a171