Fix commit on stable PackageKitQt

BUG: 388093